# qbot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  database.py
src/dashboard/: app.py
src/discovery/: google_search.py  pipeline.py  quora_scraper.py  scorer.py
src/generation/: generator.py  knowledge_base.py  prompt_builder.py
src/monitoring/: health.py
src/personas/: definitions.py  matcher.py  seed.py
src/posting/: browser.py  quora_poster.py  runner.py  scheduler.py
templates/: dashboard.html
tests/: test_persona_matcher.py  test_scorer.py
