[project]
name = "eec-quora-bot"
version = "0.1.0"
description = "EEC Global Quora marketing bot — discovers relevant questions, generates expert answers, and manages posting with human review"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "google-genai>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "rich>=13.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
qbot = "src.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"
